# roso

.context/: RosoTravel __ Website - WBS [Updated].xlsx
.notes/: city_page_wbs.txt  doubts
.plan/phase-1-ingestion-diff-engine/: plan.md
.plan/phase-10-human-qa-sampling/: plan.md
.plan/phase-2-factual-enrichment/: plan.md
.plan/phase-3-ai-drafting-pipeline/: plan.md
poc/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
poc/app/: main.py
poc/app/core/: config.py  db.py
poc/app/fixtures/: sample_attractions.json  sample_viator_destinations.json  sample_viator_destinations_v2.json  sample_viator_products.json  sample_viator_products_v2.json
poc/app/models/: entities.py
poc/app/routers/: admin.py  decisions.py  drafting.py  enrichment.py  entities.py  ingestion.py  keyword_intel.py  llm_visibility.py  mcp.py  publishing.py
poc/app/schemas/: entities.py
poc/app/services/: admin.py  audit.py  diff_engine.py  drafting.py  enrichment.py  image_gen.py  ingestion.py  keyword_intel.py  model_c.py  publisher.py  schema_builder.py  vector_similarity.py  viator.py  visibility.py
poc/scripts/: list_vertex_models.py  seed_country_regions.py  seed_demo.py  setup_vertex_auth.ps1  setup_vertex_auth.py  test_nano_banana.py  test_vertex_genai.py  test_vertex_image.py
poc/tests/: test_admin.py  test_diff_engine.py  test_drafting.py  test_enrichment.py  test_keyword_intel.py  test_llm_visibility.py  test_mcp.py  test_model_c.py  test_publishing.py  test_vector_similarity.py  test_viator.py
web/: .env.local.example  README.md
(+29 files in other folders)
