[project]
name = "rosotravel-ai-poc"
version = "0.1.0"
description = "Rosotravel AI Platform - POC"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "psycopg[binary]",
    "httpx",
    "sentence-transformers",
    "google-genai>=2.12.1",
]

[dependency-groups]
dev = ["pytest"]
